# private-assistant-iot-state-skill-py

./: .copier-answers.yml  .gitignore  CHANGELOG.md  Containerfile  README.md  pyproject.toml  renovate.json
.devcontainer/: compose.yml  devcontainer.json
docs/: main.md
integration/: __init__.py  test_integration.py
src/private_assistant_iot_state_skill/: __init__.py  config.py  iot_state_skill.py  main.py
src/private_assistant_iot_state_skill/templates/: __init__.py  state_query.j2
tests/: test_class.py  test_integration.py  test_iot_state_skill.py  test_templates.py
