[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-iot-state-skill"
version = "0.1.3"
description = "This package allows the querying of iot states via timescaledb."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "asyncpg~=0.30.0",
    "jinja2~=3.1.5",
    "mqtt-ingest-pipeline~=0.1.1",
    "private-assistant-commons~=3.0.0",
    "typer~=0.15.1",
]

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-iot-state-skill-py"
Repository = "https://github.com/stkr22/private-assistant-iot-state-skill-py"
Documentation = "https://github.com/stkr22/private-assistant-iot-state-skill-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-iot-state-skill-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-iot-state-skill-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.8.0",
    "mypy~=1.17.0",
    "pytest~=8.4.1",
    "pytest-cov~=6.0.0",
    "aiosqlite~=0.21.0",
    "pytest-asyncio~=0.26.0",
    "pytest-xdist~=3.6.0",
    "coverage[toml]~=7.6.0",
    "commitizen~=4.8.3",
]

[project.scripts]
private-assistant-iot-state-skill = "private_assistant_iot_state_skill.main:app"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q -n auto"
asyncio_mode = "auto"
markers = [
    "asyncio: mark a test as an async test",
]

[tool.coverage.run]
source = ["private_assistant_iot_state_skill"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "scm"
update_changelog_on_bump = true
