[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "private-assistant-iot-state-skill"
version = "0.4.0"
description = "This package allows the querying of iot states via timescaledb."
authors = [
    { name = "stkr22", email = "stkr22@github.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
license-files = [
    "LICENSE",
]

keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

requires-python = ">=3.12,<3.14"
dependencies = [
    "jinja2~=3.1.5",
    "mqtt-ingest-pipeline~=0.1.5",
    "private-assistant-commons~=6.3.0",
    "typer~=0.21.1",
]

[project.urls]
Homepage = "https://github.com/stkr22/private-assistant-iot-state-skill-py"
Repository = "https://github.com/stkr22/private-assistant-iot-state-skill-py"
Documentation = "https://github.com/stkr22/private-assistant-iot-state-skill-py/tree/main/docs"
Issues = "https://github.com/stkr22/private-assistant-iot-state-skill-py/issues"
Changelog = "https://github.com/stkr22/private-assistant-iot-state-skill-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff~=0.14.14",
    "mypy~=1.19.1",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "pytest-asyncio~=1.3.0",
]

[project.scripts]
private-assistant-iot-state-skill = "private_assistant_iot_state_skill.main:app"
